[feat] styling, matchPercent

--- a/src/styles/dr_UI/dr_variables.css
+++ b/src/styles/dr_UI/dr_variables.css
@@ -7,4 +7,6 @@
     --tertiary-accent: #1a1b1c;
     --error: #f44336;
     --error-accent: white;
+    --dr-elm-height: 2rem;
+    --dr-elm-padding-inline: 0.75rem;
 }
