--- a/src/styles/dr_UI/dr_elements.css
+++ b/src/styles/dr_UI/dr_elements.css
@@ -31,9 +31,10 @@
 }
 
 [class*="dr_btn"] {
-    padding-block-start: 2px;
-    padding-block-end: 4px;
-    padding-inline: 12px;
+    display: flex;
+    line-height: 1.8;
+    height: var(--dr-elm-height);
+    padding-inline: var(--dr-elm-padding-inline);
     border-radius: 1rem;
     cursor: pointer;
     transition: background 0.25s ease, color 0.25s ease;
@@ -81,20 +82,43 @@
     transform: rotate(180deg);
 }
 
+:root {
+    --dr-elm-posX: 1rem;
+    --dr-elm-posY: calc(180px - 14px);
+}
+
 .dr_OKC_userNewTabLink {
     position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-    width: 2rem;
-    height: 2rem;
+    top: var(--dr-elm-posY);
+    right: var(--dr-elm-posX);
+    width: var(--dr-elm-height);
+    height: var(--dr-elm-height);
     border-radius: 1rem;
-    transition: background-color 0.25s ease;
-    background-color: rgba(255, 255, 255, 0.5);
+    transition: background 0.25s ease;
+    background-color: white;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath fill='%23aa00cc' d='M5 21c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 3 19V5c0-.55.196-1.02.587-1.413A1.926 1.926 0 0 1 5 3h7v2H5v14h14v-7h2v7c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 19 21H5Zm4.7-5.3-1.4-1.4L17.6 5H14V3h7v7h-2V6.4l-9.3 9.3Z'/%3E%3C/svg%3E");
+    background-size: 1.25rem;
     background-repeat: no-repeat;
     background-position: 50% 50%;
 }
 
 .dr_OKC_userNewTabLink:hover {
+    background-color: var(--primary);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath fill='%23ffffff' d='M5 21c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 3 19V5c0-.55.196-1.02.587-1.413A1.926 1.926 0 0 1 5 3h7v2H5v14h14v-7h2v7c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 19 21H5Zm4.7-5.3-1.4-1.4L17.6 5H14V3h7v7h-2V6.4l-9.3 9.3Z'/%3E%3C/svg%3E");
+
+}
+
+.dr_OKC_matchPercent {
+    position: absolute;
+    top: var(--dr-elm-posY);
+    left: var(--dr-elm-posX);
+    height: var(--dr-elm-height);
+    display: flex;
+    align-items: center;
+    padding-inline: var(--dr-elm-padding-inline);
+    border-radius: 1rem;
     background-color: white;
+    color: var(--primary);
+    font-weight: 500;
+    font-size: 14px;
 }
