--- a/src/styles/pages/whoyoulikePage_styles.css
+++ b/src/styles/pages/whoyoulikePage_styles.css
@@ -17,28 +17,42 @@
 
 /* overrides to improve OKC UI */
 
+/* user-card-container fix*/
 .userrows-content-main {
     left: 0;
 }
 
+.userrows-card-container {
+    max-width: 1072px !important;
+}
+
+/* user-card width 224px*/
 .userrow-bucket-display-card,
 .userthumb img.userthumb-img,
 .userrow-bucket-display-card > div:first-child {
-    width: 220px;
+    width: 14rem;
 }
 
+/* user-card roundeed corners*/
+.userrow-bucket-display-card {
+    border-radius: 1rem !important;
+    overflow: hidden;
+}
+
+/* user-card user-info vertical spacing */
+.userInfo--center {
+    padding: 1.25rem 0 !important;
+}
+
+/* superlike-btn improve*/
 .superlike-button-scene--round, .superlike-button-scene--roundLarge, .superlike-button-scene--roundSmall,
 .superlike-button-face-front, .superlike-button-face-back {
     width: 60px;
     height: 32px;
     margin-block-end: 0.5rem;
 }
-
-.userInfo--center {
-    padding: 1.25rem 0 !important;
+/* superlike-btn icon size improve*/
+.superlike-button-icon--roundSmall {
+    width: 18px;
 }
 
-.userrow-bucket-display-card {
-    border-radius: 1rem !important;
-    overflow: hidden;
-}
