--- a/src/styles/dr_UI/dr_elements.css
+++ b/src/styles/dr_UI/dr_elements.css
@@ -36,7 +36,7 @@
     line-height: 1.8;
     height: var(--dr-elm-height);
     padding-inline: var(--dr-elm-padding-inline);
-    border-radius: 1rem;
+    border-radius: 0.75rem;
     cursor: pointer;
     transition: background 0.25s ease, color 0.25s ease;
 }
@@ -47,8 +47,8 @@
 }
 
 .dr_btn_primary:hover {
-    color: var(--primary);
-    background: var(--primary-accent);
+    color: var(--primary-accent);
+    background: var(--primary-hover);
 }
 
 .dr_btn_secondary {
@@ -57,16 +57,14 @@
 }
 
 .dr_btn_secondary:hover {
-    color: var(--primary-accent);
-    background: var(--primary);
+    color: var(--secondary-accent);
+    background: var(--secondary-hover);
 }
-
-
 
 [class*="dr_icon_btn"] {
     position: relative;
-    width: 32px;
-    height: 32px;
+    width: var(--dr-elm-height);
+    height: var(--dr-elm-height);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -107,7 +105,7 @@
     border-radius: 1rem;
     transition: background 0.25s ease;
     background-color: white;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath fill='%23aa00cc' d='M5 21c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 3 19V5c0-.55.196-1.02.587-1.413A1.926 1.926 0 0 1 5 3h7v2H5v14h14v-7h2v7c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 19 21H5Zm4.7-5.3-1.4-1.4L17.6 5H14V3h7v7h-2V6.4l-9.3 9.3Z'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath fill='%23E00095' d='M5 21c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 3 19V5c0-.55.196-1.02.587-1.413A1.926 1.926 0 0 1 5 3h7v2H5v14h14v-7h2v7c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 19 21H5Zm4.7-5.3-1.4-1.4L17.6 5H14V3h7v7h-2V6.4l-9.3 9.3Z'/%3E%3C/svg%3E");
     background-size: 1.25rem;
     background-repeat: no-repeat;
     background-position: 50% 50%;
