--- a/src/styles/pages/whoyoulikePage_styles.css
+++ b/src/styles/pages/whoyoulikePage_styles.css
@@ -22,21 +22,28 @@
     left: 0;
 }
 
-.userrows-card-container {
-    max-width: 1072px !important;
-}
-
 /* user-card width 224px*/
 .userrow-bucket-display-card,
 .userthumb img.userthumb-img,
 .userrow-bucket-display-card > div:first-child {
-    width: 14rem;
+    width: 13rem;
+    margin-top: 0;
+}
+
+/* remove image scale on card:hover*/
+.userrow-bucket-display-card:hover .userthumb img.userthumb-img {
+    transform: none;
 }
 
 /* user-card roundeed corners*/
 .userrow-bucket-display-card {
     border-radius: 1rem !important;
     overflow: hidden;
+    transition: transform 0.25s ease;
+}
+
+.userrow-bucket-display-card:hover {
+    transform: scale(1.05);
 }
 
 /* user-card user-info vertical spacing */
@@ -47,8 +54,8 @@
 /* superlike-btn improve*/
 .superlike-button-scene--round, .superlike-button-scene--roundLarge, .superlike-button-scene--roundSmall,
 .superlike-button-face-front, .superlike-button-face-back {
-    width: 60px;
-    height: 32px;
+    width: 3.5rem;
+    height: var(--dr-elm-height);
     margin-block-end: 0.5rem;
 }
 /* superlike-btn icon size improve*/
