--- a/src/styles/dr_UI/dr_elements.css
+++ b/src/styles/dr_UI/dr_elements.css
@@ -136,3 +136,17 @@
     color: white;
     background-color: var(--primary);
 }
+
+.dr_OKC_firstMessage {
+    position: absolute;
+    top: var(--dr-elm-posY);
+    right: calc(var(--dr-elm-posX) + 0.75rem + var(--dr-elm-height));
+    width: var(--dr-elm-height);
+    height: var(--dr-elm-height);
+    border-radius: 1rem;
+    background-color: var(--primary);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' fill='none'%3E%3Cpath fill='white' d='m9.729 18.485-5.7-5.7 1.425-1.425 4.275 4.275 9.175-9.175 1.425 1.425-10.6 10.6Z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: 1.5rem;
+}
