--- a/src/styles/dr_UI/elements/dr_blockBtn.css
+++ b/src/styles/dr_UI/elements/dr_blockBtn.css
@@ -1,9 +1,4 @@
-.dt-action-buttons-button {
-    min-width: auto;
-    padding: 0 1.5rem;
-}
-
-.dt-action-button.dr_block {
+.dr_blockBtn {
     cursor: pointer;
     background-color: var(--error);
     color: var(--error-accent);
@@ -14,4 +9,11 @@
     height: 50px;
     padding: 0 2rem 0 calc(2rem - 6px);
     margin-right: 10px;
+    font-weight: 700;
+}
+
+.dr_blockBtn .dr_blockBtn-text {
+    margin-left: 6px;
+    font-weight: bold;
+    font-size: 1rem;
 }
