--- a/src/styles/dr_UI/elements/dr_blockBtn.css
+++ b/src/styles/dr_UI/elements/dr_blockBtn.css
@@ -7,13 +7,18 @@
     justify-content: center;
     border-radius: 50px;
     height: 50px;
-    padding: 0 2rem 0 calc(2rem - 6px);
-    margin-right: 10px;
+    padding-inline: 1.25rem;
+    margin-right: 12px;
     font-weight: 700;
+    /*transition: background 0.25s ease;*/
+}
+
+.dr_blockBtn:hover {
+    background-color: var(--error-hover);
+    color: var(--error-accent);
 }
 
 .dr_blockBtn .dr_blockBtn-text {
-    margin-left: 6px;
     font-weight: bold;
     font-size: 1rem;
 }
