--- a/src/styles/okc_pages/styles_pageWhoYouLike.css
+++ b/src/styles/okc_pages/styles_pageWhoYouLike.css
@@ -1,7 +1,7 @@
 /* Highlight user city*/
 .not_City {
-    background: var(--error);
-    color: var(--error-accent);
+    background: var(--primary);
+    color: var(--primary-accent);
     padding-inline: 0.25rem;
     border-radius: 4px;
     font-weight: 500;
