--- a/src/styles/dr_UI/elements/dr_blockBtn.css
+++ b/src/styles/dr_UI/elements/dr_blockBtn.css
@@ -15,7 +15,7 @@
 
 .dr_blockBtn:hover {
     background-color: var(--error-hover);
-    color: var(--error-accent);
+    color: var(--error-hover-accent);
 }
 
 .dr_blockBtn .dr_blockBtn-text {
