--- a/src/styles/dr_UI/dr_helper.css
+++ b/src/styles/dr_UI/dr_helper.css
@@ -5,7 +5,7 @@
 }
 
 
-.height-0 {
+.max-height-0 {
     max-height: 0 !important;
     padding-block: 0 !important;
     margin-block: 0 !important;
