--- a/src/styles/okc_pages/styles_pageWhoYouLike.css
+++ b/src/styles/okc_pages/styles_pageWhoYouLike.css
@@ -1,3 +1,24 @@
+/*More discreet superlike button*/
+.superlike-button-scene {
+    box-shadow: none;
+}
+.superlike-button-face-back,
+.superlike-button-face-front {
+    background: linear-gradient(90deg, #6673ff 10%, #8a80ff 90%);
+}
+
+/* superlike-btn improve*/
+.superlike-button-scene--round, .superlike-button-scene--roundLarge, .superlike-button-scene--roundSmall,
+.superlike-button-face-front, .superlike-button-face-back {
+    width: 3.5rem;
+    height: var(--dr-elm-height);
+    margin-block-end: 0.5rem;
+}
+/* superlike-btn icon size improve*/
+.superlike-button-icon--roundSmall {
+    width: 18px;
+}
+
 /* Highlight user city*/
 .not_City {
     background-color: var(--primary);
