--- a/src/styles/okc_overrides/okc_overrides.css
+++ b/src/styles/okc_overrides/okc_overrides.css
@@ -7,4 +7,6 @@ main + aside {
     display: none !important;
 }
 
-
+.messenger-main-window-user-row {
+    background-color: var(--primary) !important;
+}
