--- a/src/styles/dr_UI/dr_UI_sections_whoYouLike.css
+++ b/src/styles/dr_UI/dr_UI_sections_whoYouLike.css
@@ -17,3 +17,8 @@
 label[for="input_notCity"] {
     padding-block: 0.25rem;
 }
+
+#dr_UI_wrapper_hideMatchHighlightPercent {
+    display: flex;
+    flex-direction: column;
+}
