[improve] styles, [chore] style cleanup, [improve] build scripts, [improve] replaced iconButton

--- a/src/styles/dr_UI/dr_helper.css
+++ b/src/styles/dr_UI/dr_helper.css
@@ -27,3 +27,7 @@
     pointer-events: none !important;
     cursor: not-allowed !important;
 }
+
+.dr_color_text-light {
+    color: var(--text-light);
+}
