--- a/src/styles/dr_UI/dr_UI.css
+++ b/src/styles/dr_UI/dr_UI.css
@@ -9,7 +9,7 @@
     padding-block: 0.5rem 0.75rem;
     padding-inline: var(--dr-elm-padding-inline);
     border: 1px solid var(--secondary);
-    width: 240px;
+    width: 280px;
     transition: border-color 0.25s ease;
 }
 
@@ -38,10 +38,27 @@
 }
 
 .dr_UI_row {
+    position: relative;
     display: flex;
-    gap: 0.5rem;
+    gap: 0.75rem;
     flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
+}
+
+.dr_UI_row_userImg {
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 1.5rem;
+    transition: transform 0.25s ease, margin 0.25s ease;
+}
+
+.dr_UI_row_userImg:hover {
+    margin: 0.75rem;
+    transform: scale(2);
+}
+
+.dr_UI_row_btn {
+    margin-left: auto;
 }
 
 .dr_UI_row:last-child {
