--- a/src/styles/dr_UI/dr_helper.css
+++ b/src/styles/dr_UI/dr_helper.css
@@ -1,3 +1,9 @@
+.not-minMaxAge {
+    opacity: 0.1;
+    pointer-events: none;
+    cursor: not-allowed !important;
+}
+
 .not-online,
 .hidden {
     display: none !important;
