--- a/src/styles/dr_UI/dr_hideMessagedUsers.css
+++ b/src/styles/dr_UI/dr_hideMessagedUsers.css
@@ -1,4 +1,5 @@
 .userrow-bucket-card-link-container:has(.dr_OKC_firstMessage) {
-    opacity: 0.10;
+    opacity: 0.1;
     pointer-events: none;
+    cursor: not-allowed !important;
 }
