feat(whoYouLike): add bulk blocking for long-ago messaged users - Add button to block users messaged more than 2 weeks ago - Improve visibility change detection to re-run UI updates - Add visual indicator for old messages (black background) - Add toggle class animation utility - Improve button styling and layout - Refactor messaging related features into dedicated folder - Add max-height animation issues

--- a/src/styles/dr_UI/dr_UI_sections_whoYouLike.css
+++ b/src/styles/dr_UI/dr_UI_sections_whoYouLike.css
@@ -11,7 +11,7 @@
 
 #dr_UI_body_filter {
     overflow-y: hidden;
-    max-height: 29rem;
+    max-height: fit-content;
 }
 
 label[for="input_notCity"] {
@@ -21,4 +21,15 @@ label[for="input_notCity"] {
 #dr_UI_wrapper_hideMatchHighlightPercent {
     display: flex;
     flex-direction: column;
+}
+
+
+#dr_UI_wrapper_blockUsersMessagedLongAgo {
+    display: flex;
+    gap: 1rem;
+
+    #btn_cancelBlockUsersMessagedLongAgo,
+    #btn_blockUsersMessagedLongAgo {
+        flex-grow: 1;
+    }
 }
