--- a/src/styles/dr_UI/dr_components.css
+++ b/src/styles/dr_UI/dr_components.css
@@ -137,6 +137,9 @@
     background-position: 50% 50%;
     background-size: 1.25rem;
 }
+.dr_OKC_firstMessage.twoWeeksAgo{
+    background-color: black;
+}
 
 .dr_errorElement {
     display: flex;
