--- a/src/styles/dr_UI/dr_UI.css
+++ b/src/styles/dr_UI/dr_UI.css
@@ -35,6 +35,7 @@
     gap: 0.5rem;
     padding-block-start: 0.5rem;
     transition: max-height 0.25s ease, padding 0.25s ease, margin 0.25s ease;
+    interpolate-size: allow-keywords; /*allows to animate between max-height: fit-content -> max-height 0*/
 }
 
 .dr_UI_footer {
